added new nav bar rating admin pael

--- a/src/Components/HouseDetailsCom/PageBottom/pageBottom.css
+++ b/src/Components/HouseDetailsCom/PageBottom/pageBottom.css
@@ -12,9 +12,12 @@
     font-weight: bold;
     padding-top: 10px;
     margin-left: 10px;
+    white-space: pre-line;
+
 }
 
 .ratingCards{
     display: flex;
     margin-top: 20px;
 }
+
