--- a/src/Components/AdminCom/adminCom.css
+++ b/src/Components/AdminCom/adminCom.css
@@ -1,7 +1,7 @@
 .panelContainer{
-    background-color: rgb(232, 249, 244);
-    height: 400px;
-    width: 450px;
+    background-color: rgb(51, 85, 75);
+    height: 500px;
+    width: 500px;
     align-items: center;
     margin-left: 500px;
     margin-top: 85px;
@@ -15,11 +15,17 @@
 .descriptionInput{
     margin-top: 20px;
 }
+.ImageInput img {
+    max-width: 50%;  /* Set the maximum width to the container width */
+    max-height: 50px;  /* Set the maximum height (adjust as needed) */
+    display: block;  /* Ensure the image is displayed as a block element */
+    margin: 0 auto;  /* Center the image horizontally within the container */
+}
 .desInput {
     box-sizing: border-box;
     border: none;
-    height: 150px;
-    width: 300px;
+    height: 200px;
+    width: 400px;
     padding-top: 10px;
     border-radius: 10px;
     resize: none; /* Optional: Disable resizing */
